src/tests/snapshots/ppl__tests__string.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "src/main.ppl"

%"Type<String>" = type { %String, %Integer }
%String = type { ptr }
%Integer = type { ptr }
%"Type<Integer>" = type { %String, %Integer }
%"Type<Array<Integer>>" = type { %String, %Integer }
%Rational = type { ptr }

@"Type<String>" = private global %"Type<String>" zeroinitializer
@0 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@"Type<Integer>" = private global %"Type<Integer>" zeroinitializer
@1 = private unnamed_addr constant [8 x i8] c"Integer\00", align 1
@"Type<Array<Integer>>" = private global %"Type<Array<Integer>>" zeroinitializer
@2 = private unnamed_addr constant [15 x i8] c"Array<Integer>\00", align 1
@3 = private unnamed_addr constant [6 x i8] c"Hello\00", align 1
@4 = private unnamed_addr constant [2 x i8] c" \00", align 1
@5 = private unnamed_addr constant [7 x i8] c"World!\00", align 1
@6 = private unnamed_addr constant [2 x i8] c"0\00", align 1

define private void @initialize() !dbg !3 {
  %1 = alloca %"Type<String>", align 8, !dbg !7
  %"Type<String>.name" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 0, !dbg !7
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 6), !dbg !8
  store %String %2, ptr %"Type<String>.name", align 8, !dbg !8
  %"Type<String>.size" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 1, !dbg !8
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !8
  store %Integer %3, ptr %"Type<String>.size", align 8, !dbg !8
  %4 = load %"Type<String>", ptr %1, align 8, !dbg !8
  store %"Type<String>" %4, ptr @"Type<String>", align 8, !dbg !8
  br label %return, !dbg !8

return:                                           ; preds = %0
  ret void
}

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define private void @initialize.1() !dbg !9 {
  %1 = alloca %"Type<Integer>", align 8, !dbg !10
  %"Type<Integer>.name" = getelementptr inbounds %"Type<Integer>", ptr %1, i32 0, i32 0, !dbg !10
  %2 = call %String @string_from_c_string_and_length(ptr @1, i64 7), !dbg !11
  store %String %2, ptr %"Type<Integer>.name", align 8, !dbg !11
  %"Type<Integer>.size" = getelementptr inbounds %"Type<Integer>", ptr %1, i32 0, i32 1, !dbg !11
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !11
  store %Integer %3, ptr %"Type<Integer>.size", align 8, !dbg !11
  %4 = load %"Type<Integer>", ptr %1, align 8, !dbg !11
  store %"Type<Integer>" %4, ptr @"Type<Integer>", align 8, !dbg !11
  br label %return, !dbg !11

return:                                           ; preds = %0
  ret void
}

define private void @initialize.2() !dbg !12 {
  %1 = alloca %"Type<Array<Integer>>", align 8, !dbg !13
  %"Type<Array<Integer>>.name" = getelementptr inbounds %"Type<Array<Integer>>", ptr %1, i32 0, i32 0, !dbg !13
  %2 = call %String @string_from_c_string_and_length(ptr @2, i64 14), !dbg !14
  store %String %2, ptr %"Type<Array<Integer>>.name", align 8, !dbg !14
  %"Type<Array<Integer>>.size" = getelementptr inbounds %"Type<Array<Integer>>", ptr %1, i32 0, i32 1, !dbg !14
  %3 = call %Integer @integer_from_i64(i64 24), !dbg !14
  store %Integer %3, ptr %"Type<Array<Integer>>.size", align 8, !dbg !14
  %4 = load %"Type<Array<Integer>>", ptr %1, align 8, !dbg !14
  store %"Type<Array<Integer>>" %4, ptr @"Type<Array<Integer>>", align 8, !dbg !14
  br label %return, !dbg !14

return:                                           ; preds = %0
  ret void
}

define void @main.execute() !dbg !15 {
  call void @initialize(), !dbg !16
  call void @initialize.1(), !dbg !17
  call void @initialize.2(), !dbg !18
  %1 = call %String @string_from_c_string_and_length(ptr @3, i64 5), !dbg !19
  %2 = call %String @string_from_c_string_and_length(ptr @4, i64 1), !dbg !20
  %3 = call %String @string_plus_string(%String %1, %String %2), !dbg !20
  %4 = call %String @string_from_c_string_and_length(ptr @5, i64 6), !dbg !21
  %5 = call %String @string_plus_string(%String %3, %String %4), !dbg !21
  call void @"println <:String>"(%String %5), !dbg !21
  %6 = call %String @"String from <:None>"(), !dbg !22
  call void @"println <:String>"(%String %6), !dbg !22
  %7 = call %String @"String from <:Bool>"(i1 false), !dbg !23
  call void @"println <:String>"(%String %7), !dbg !23
  %8 = call %String @"String from <:Bool>"(i1 true), !dbg !24
  call void @"println <:String>"(%String %8), !dbg !24
  %9 = call %Integer @integer_from_i64(i64 0), !dbg !25
  %10 = call %String @integer_as_string(%Integer %9), !dbg !25
  call void @"println <:String>"(%String %10), !dbg !25
  %11 = call %Rational @rational_from_c_string(ptr @6), !dbg !26
  %12 = call %String @rational_as_string(%Rational %11), !dbg !26
  call void @"println <:String>"(%String %12), !dbg !26
  %13 = load %"Type<Integer>", ptr @"Type<Integer>", align 8, !dbg !17
  %14 = call %String @"String from <:Type<Integer>>"(%"Type<Integer>" %13), !dbg !17
  call void @"println <:String>"(%String %14), !dbg !17
  %15 = load %"Type<Array<Integer>>", ptr @"Type<Array<Integer>>", align 8, !dbg !18
  %16 = call %String @"String from <:Type<Array<Integer>>>"(%"Type<Array<Integer>>" %15), !dbg !18
  call void @"println <:String>"(%String %16), !dbg !18
  br label %return, !dbg !18

return:                                           ; preds = %0
  ret void
}

declare void @"println <:String>"(%String)

declare %String @string_plus_string(%String, %String)

declare %String @"String from <:None>"()

declare %String @"String from <:Bool>"(i1)

declare %String @integer_as_string(%Integer)

declare %String @rational_as_string(%Rational)

declare %Rational @rational_from_c_string(ptr)

define private %String @"String from <:Type<Integer>>"(%"Type<Integer>" %0) !dbg !27 {
  %return_value = alloca %String, align 8
  %ty = alloca %"Type<Integer>", align 8
  store %"Type<Integer>" %0, ptr %ty, align 8
  %name = getelementptr inbounds %"Type<Integer>", ptr %ty, i32 0, i32 0, !dbg !28
  %2 = load %String, ptr %name, align 8, !dbg !28
  %3 = call %String @clone_string(%String %2), !dbg !28
  %"$tmp@4328" = alloca %String, align 8, !dbg !28
  store %String %3, ptr %"$tmp@4328", align 8, !dbg !28
  %4 = load %String, ptr %"$tmp@4328", align 8, !dbg !28
  store %String %4, ptr %return_value, align 8, !dbg !28
  br label %return, !dbg !28

return:                                           ; preds = %1
  %5 = load %String, ptr %return_value, align 8
  ret %String %5
}

declare %String @clone_string(%String)

define private %String @"String from <:Type<Array<Integer>>>"(%"Type<Array<Integer>>" %0) !dbg !29 {
  %return_value = alloca %String, align 8
  %ty = alloca %"Type<Array<Integer>>", align 8
  store %"Type<Array<Integer>>" %0, ptr %ty, align 8
  %name = getelementptr inbounds %"Type<Array<Integer>>", ptr %ty, i32 0, i32 0, !dbg !30
  %2 = load %String, ptr %name, align 8, !dbg !30
  %3 = call %String @clone_string(%String %2), !dbg !30
  %"$tmp@4328" = alloca %String, align 8, !dbg !30
  store %String %3, ptr %"$tmp@4328", align 8, !dbg !30
  %4 = load %String, ptr %"$tmp@4328", align 8, !dbg !30
  store %String %4, ptr %return_value, align 8, !dbg !30
  br label %return, !dbg !30

return:                                           ; preds = %1
  %5 = load %String, ptr %return_value, align 8
  ret %String %5
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "src/main.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !2, file: !2, line: 7, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 7, column: 9, scope: !3)
!8 = !DILocation(line: 0, scope: !3)
!9 = distinct !DISubprogram(name: "initialize.1", linkageName: "initialize.1", scope: !2, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 6, column: 21, scope: !9)
!11 = !DILocation(line: 0, scope: !9)
!12 = distinct !DISubprogram(name: "initialize.2", linkageName: "initialize.2", scope: !2, file: !2, line: 7, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!13 = !DILocation(line: 7, column: 21, scope: !12)
!14 = !DILocation(line: 0, scope: !12)
!15 = distinct !DISubprogram(name: "main.execute", linkageName: "main.execute", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!16 = !DILocation(line: 7, column: 9, scope: !15)
!17 = !DILocation(line: 6, column: 21, scope: !15)
!18 = !DILocation(line: 7, column: 21, scope: !15)
!19 = !DILocation(line: 0, column: 8, scope: !15)
!20 = !DILocation(line: 0, column: 18, scope: !15)
!21 = !DILocation(line: 0, column: 24, scope: !15)
!22 = !DILocation(line: 1, column: 21, scope: !15)
!23 = !DILocation(line: 2, column: 21, scope: !15)
!24 = !DILocation(line: 3, column: 21, scope: !15)
!25 = !DILocation(line: 4, column: 21, scope: !15)
!26 = !DILocation(line: 5, column: 21, scope: !15)
!27 = distinct !DISubprogram(name: "String from <:Type<Integer>>", linkageName: "String from <:Type<Integer>>", scope: !15, file: !2, line: 7, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!28 = !DILocation(line: 7, column: 36, scope: !27)
!29 = distinct !DISubprogram(name: "String from <:Type<Array<Integer>>>", linkageName: "String from <:Type<Array<Integer>>>", scope: !15, file: !2, line: 7, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!30 = !DILocation(line: 7, column: 36, scope: !29)
