src/tests/snapshots/ppl__tests__string.run.snap
---
source: src/tests/mod.rs
expression: run_log
---
Hello World!
none
false
true
0
0.0
Integer
Array<Integer>
