src/tests/snapshots/ppl__tests__supertraits.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "src/main.ppl"

%"Type<String>" = type { %String, %Integer }
%String = type { ptr }
%Integer = type { ptr }

@"Type<String>" = private global %"Type<String>" zeroinitializer
@0 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@1 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@2 = private unnamed_addr constant [4 x i8] c"bar\00", align 1

define private void @initialize() !dbg !3 {
  %1 = alloca %"Type<String>", align 8, !dbg !7
  %"Type<String>.name" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 0, !dbg !7
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 6), !dbg !8
  store %String %2, ptr %"Type<String>.name", align 8, !dbg !8
  %"Type<String>.size" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 1, !dbg !8
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !8
  store %Integer %3, ptr %"Type<String>.size", align 8, !dbg !8
  %4 = load %"Type<String>", ptr %1, align 8, !dbg !8
  store %"Type<String>" %4, ptr @"Type<String>", align 8, !dbg !8
  br label %return, !dbg !8

return:                                           ; preds = %0
  ret void
}

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define void @"foo <:None>"() !dbg !9 {
  %1 = call %String @string_from_c_string_and_length(ptr @1, i64 3), !dbg !10
  %"$tmp0@105" = alloca %String, align 8, !dbg !10
  store %String %1, ptr %"$tmp0@105", align 8, !dbg !10
  %2 = load %String, ptr %"$tmp0@105", align 8, !dbg !10
  call void @print_string(%String %2), !dbg !10
  br label %return, !dbg !10

return:                                           ; preds = %0
  ret void
}

declare void @print_string(%String)

define void @"bar <:None>"() !dbg !11 {
  %1 = call %String @string_from_c_string_and_length(ptr @2, i64 3), !dbg !12
  %"$tmp0@137" = alloca %String, align 8, !dbg !12
  store %String %1, ptr %"$tmp0@137", align 8, !dbg !12
  %2 = load %String, ptr %"$tmp0@137", align 8, !dbg !12
  call void @"println <:String>"(%String %2), !dbg !12
  br label %return, !dbg !12

return:                                           ; preds = %0
  ret void
}

declare void @"println <:String>"(%String)

define void @main.execute() !dbg !13 {
init_globals:
  call void @initialize(), !dbg !14
  br label %0, !dbg !14

0:                                                ; preds = %init_globals
  call void @"foobar <:None>"(), !dbg !15
  br label %return, !dbg !14

return:                                           ; preds = %0
  ret void
}

define private void @"foobar <:None>"() !dbg !16 {
  call void @"foo <:None>"(), !dbg !17
  call void @"bar <:None>"(), !dbg !18
  br label %return, !dbg !18

return:                                           ; preds = %0
  ret void
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "src/main.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !2, file: !2, line: 15, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 15, column: 11, scope: !3)
!8 = !DILocation(line: 0, scope: !3)
!9 = distinct !DISubprogram(name: "foo <:None>", linkageName: "foo <:None>", scope: !2, file: !2, line: 8, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 8, column: 24, scope: !9)
!11 = distinct !DISubprogram(name: "bar <:None>", linkageName: "bar <:None>", scope: !2, file: !2, line: 9, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!12 = !DILocation(line: 9, column: 26, scope: !11)
!13 = distinct !DISubprogram(name: "main.execute", linkageName: "main.execute", scope: !2, file: !2, line: 15, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!14 = !DILocation(line: 15, column: 11, scope: !13)
!15 = !DILocation(line: 15, column: 7, scope: !13)
!16 = distinct !DISubprogram(name: "foobar <:None>", linkageName: "foobar <:None>", scope: !13, file: !2, line: 11, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!17 = !DILocation(line: 12, column: 5, scope: !16)
!18 = !DILocation(line: 13, column: 5, scope: !16)
