src/tests/snapshots/ppl__tests__swap.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "src/main.ppl"

%"Type<String>" = type { %String, %Integer }
%String = type { ptr }
%Integer = type { ptr }
%"Type<MemoryAddress>" = type { %String, %Integer }
%"Type<I32>" = type { %String, %Integer }
%"Type<F64>" = type { %String, %Integer }

@"Type<String>" = private global %"Type<String>" zeroinitializer
@0 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@"Type<MemoryAddress>" = private global %"Type<MemoryAddress>" zeroinitializer
@1 = private unnamed_addr constant [14 x i8] c"MemoryAddress\00", align 1
@"Type<I32>" = private global %"Type<I32>" zeroinitializer
@2 = private unnamed_addr constant [4 x i8] c"I32\00", align 1
@"Type<F64>" = private global %"Type<F64>" zeroinitializer
@3 = private unnamed_addr constant [4 x i8] c"F64\00", align 1
@a = global %Integer zeroinitializer
@b = global %Integer zeroinitializer
@4 = private unnamed_addr constant [2 x i8] c" \00", align 1
@5 = private unnamed_addr constant [2 x i8] c" \00", align 1

define private void @initialize() !dbg !3 {
  %1 = alloca %"Type<String>", align 8, !dbg !7
  %"Type<String>.name" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 0, !dbg !7
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 6), !dbg !8
  store %String %2, ptr %"Type<String>.name", align 8, !dbg !8
  %"Type<String>.size" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 1, !dbg !8
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !8
  store %Integer %3, ptr %"Type<String>.size", align 8, !dbg !8
  %4 = load %"Type<String>", ptr %1, align 8, !dbg !8
  store %"Type<String>" %4, ptr @"Type<String>", align 8, !dbg !8
  br label %return, !dbg !8

return:                                           ; preds = %0
  ret void
}

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define private void @initialize.1() !dbg !9 {
  %1 = alloca %"Type<MemoryAddress>", align 8, !dbg !10
  %"Type<MemoryAddress>.name" = getelementptr inbounds %"Type<MemoryAddress>", ptr %1, i32 0, i32 0, !dbg !10
  %2 = call %String @string_from_c_string_and_length(ptr @1, i64 13), !dbg !11
  store %String %2, ptr %"Type<MemoryAddress>.name", align 8, !dbg !11
  %"Type<MemoryAddress>.size" = getelementptr inbounds %"Type<MemoryAddress>", ptr %1, i32 0, i32 1, !dbg !11
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !11
  store %Integer %3, ptr %"Type<MemoryAddress>.size", align 8, !dbg !11
  %4 = load %"Type<MemoryAddress>", ptr %1, align 8, !dbg !11
  store %"Type<MemoryAddress>" %4, ptr @"Type<MemoryAddress>", align 8, !dbg !11
  br label %return, !dbg !11

return:                                           ; preds = %0
  ret void
}

define private void @initialize.2() !dbg !12 {
  %1 = alloca %"Type<I32>", align 8, !dbg !13
  %"Type<I32>.name" = getelementptr inbounds %"Type<I32>", ptr %1, i32 0, i32 0, !dbg !13
  %2 = call %String @string_from_c_string_and_length(ptr @2, i64 3), !dbg !14
  store %String %2, ptr %"Type<I32>.name", align 8, !dbg !14
  %"Type<I32>.size" = getelementptr inbounds %"Type<I32>", ptr %1, i32 0, i32 1, !dbg !14
  %3 = call %Integer @integer_from_i64(i64 4), !dbg !14
  store %Integer %3, ptr %"Type<I32>.size", align 8, !dbg !14
  %4 = load %"Type<I32>", ptr %1, align 8, !dbg !14
  store %"Type<I32>" %4, ptr @"Type<I32>", align 8, !dbg !14
  br label %return, !dbg !14

return:                                           ; preds = %0
  ret void
}

define private void @initialize.3() !dbg !15 {
  %1 = alloca %"Type<F64>", align 8, !dbg !16
  %"Type<F64>.name" = getelementptr inbounds %"Type<F64>", ptr %1, i32 0, i32 0, !dbg !16
  %2 = call %String @string_from_c_string_and_length(ptr @3, i64 3), !dbg !17
  store %String %2, ptr %"Type<F64>.name", align 8, !dbg !17
  %"Type<F64>.size" = getelementptr inbounds %"Type<F64>", ptr %1, i32 0, i32 1, !dbg !17
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !17
  store %Integer %3, ptr %"Type<F64>.size", align 8, !dbg !17
  %4 = load %"Type<F64>", ptr %1, align 8, !dbg !17
  store %"Type<F64>" %4, ptr @"Type<F64>", align 8, !dbg !17
  br label %return, !dbg !17

return:                                           ; preds = %0
  ret void
}

define void @main.execute() !dbg !18 {
  call void @initialize(), !dbg !19
  call void @initialize.1(), !dbg !19
  call void @initialize.2(), !dbg !20
  call void @initialize.3(), !dbg !21
  call void @initialize.4(), !dbg !22
  call void @initialize.5(), !dbg !23
  %1 = call %Integer @clone_integer(ptr @a), !dbg !24
  call void @"print <:Integer>"(%Integer %1), !dbg !24
  %2 = call %String @string_from_c_string_and_length(ptr @4, i64 1), !dbg !25
  call void @print_string(%String %2), !dbg !25
  %3 = call %Integer @clone_integer(ptr @b), !dbg !26
  call void @"println <:Integer>"(%Integer %3), !dbg !26
  call void @"swap <:ReferenceMut<Integer>> and <:ReferenceMut<Integer>>"(ptr @a, ptr @b), !dbg !27
  %4 = call %Integer @clone_integer(ptr @a), !dbg !28
  call void @"print <:Integer>"(%Integer %4), !dbg !28
  %5 = call %String @string_from_c_string_and_length(ptr @5, i64 1), !dbg !29
  call void @print_string(%String %5), !dbg !29
  %6 = call %Integer @clone_integer(ptr @b), !dbg !30
  call void @"println <:Integer>"(%Integer %6), !dbg !30
  call void @destroy_integer(ptr @a), !dbg !31
  call void @destroy_integer(ptr @b), !dbg !32
  br label %return, !dbg !32

return:                                           ; preds = %0
  ret void
}

define private void @initialize.4() !dbg !33 {
  %1 = call %Integer @integer_from_i64(i64 1), !dbg !34
  store %Integer %1, ptr @a, align 8, !dbg !34
  br label %return, !dbg !34

return:                                           ; preds = %0
  ret void
}

define private void @initialize.5() !dbg !35 {
  %1 = call %Integer @integer_from_i64(i64 2), !dbg !36
  store %Integer %1, ptr @b, align 8, !dbg !36
  br label %return, !dbg !36

return:                                           ; preds = %0
  ret void
}

define private void @"print <:Integer>"(%Integer %0) !dbg !37 {
  %x = alloca %Integer, align 8
  store %Integer %0, ptr %x, align 8
  %2 = load %Integer, ptr %x, align 8, !dbg !38
  %3 = call %String @integer_as_string(%Integer %2), !dbg !38
  call void @print_string(%String %3), !dbg !38
  br label %return, !dbg !38

return:                                           ; preds = %1
  ret void
}

declare void @print_string(%String)

declare %String @integer_as_string(%Integer)

declare %Integer @clone_integer(ptr)

define private void @"println <:Integer>"(%Integer %0) !dbg !39 {
  %x = alloca %Integer, align 8
  store %Integer %0, ptr %x, align 8
  %2 = load %Integer, ptr %x, align 8, !dbg !40
  %3 = call %String @integer_as_string(%Integer %2), !dbg !40
  call void @"println <:String>"(%String %3), !dbg !40
  br label %return, !dbg !40

return:                                           ; preds = %1
  ret void
}

declare void @"println <:String>"(%String)

define private void @"swap <:ReferenceMut<Integer>> and <:ReferenceMut<Integer>>"(ptr %0, ptr %1) !dbg !41 {
  %a = alloca ptr, align 8
  store ptr %0, ptr %a, align 8
  %b = alloca ptr, align 8
  store ptr %1, ptr %b, align 8
  %3 = load ptr, ptr %a, align 8, !dbg !42
  %4 = load %Integer, ptr %3, align 8, !dbg !42
  %tmp = alloca %Integer, align 8, !dbg !42
  store %Integer %4, ptr %tmp, align 8, !dbg !42
  %5 = load ptr, ptr %a, align 8, !dbg !43
  %6 = load ptr, ptr %b, align 8, !dbg !44
  %7 = load %Integer, ptr %6, align 8, !dbg !44
  store %Integer %7, ptr %5, align 8, !dbg !44
  %8 = load ptr, ptr %b, align 8, !dbg !45
  %9 = load %Integer, ptr %tmp, align 8, !dbg !46
  store %Integer %9, ptr %8, align 8, !dbg !46
  br label %return, !dbg !46

return:                                           ; preds = %2
  ret void
}

declare void @destroy_integer(ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "src/main.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !2, file: !2, line: 9, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 9, column: 9, scope: !3)
!8 = !DILocation(line: 0, scope: !3)
!9 = distinct !DISubprogram(name: "initialize.1", linkageName: "initialize.1", scope: !2, file: !2, line: 9, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 9, column: 9, scope: !9)
!11 = !DILocation(line: 0, scope: !9)
!12 = distinct !DISubprogram(name: "initialize.2", linkageName: "initialize.2", scope: !2, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!13 = !DILocation(line: 6, column: 6, scope: !12)
!14 = !DILocation(line: 0, scope: !12)
!15 = distinct !DISubprogram(name: "initialize.3", linkageName: "initialize.3", scope: !2, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!16 = !DILocation(line: 6, column: 1, scope: !15)
!17 = !DILocation(line: 0, scope: !15)
!18 = distinct !DISubprogram(name: "main.execute", linkageName: "main.execute", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!19 = !DILocation(line: 9, column: 9, scope: !18)
!20 = !DILocation(line: 6, column: 6, scope: !18)
!21 = !DILocation(line: 6, column: 1, scope: !18)
!22 = !DILocation(line: 0, column: 12, scope: !18)
!23 = !DILocation(line: 1, column: 12, scope: !18)
!24 = !DILocation(line: 2, column: 6, scope: !18)
!25 = !DILocation(line: 3, column: 6, scope: !18)
!26 = !DILocation(line: 4, column: 8, scope: !18)
!27 = !DILocation(line: 6, column: 11, scope: !18)
!28 = !DILocation(line: 7, column: 6, scope: !18)
!29 = !DILocation(line: 8, column: 6, scope: !18)
!30 = !DILocation(line: 9, column: 8, scope: !18)
!31 = !DILocation(line: 0, scope: !18)
!32 = !DILocation(line: 1, scope: !18)
!33 = distinct !DISubprogram(name: "initialize.4", linkageName: "initialize.4", scope: !18, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!34 = !DILocation(line: 0, column: 12, scope: !33)
!35 = distinct !DISubprogram(name: "initialize.5", linkageName: "initialize.5", scope: !18, file: !2, line: 1, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!36 = !DILocation(line: 1, column: 12, scope: !35)
!37 = distinct !DISubprogram(name: "print <:Integer>", linkageName: "print <:Integer>", scope: !18, file: !2, line: 9, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!38 = !DILocation(line: 9, column: 9, scope: !37)
!39 = distinct !DISubprogram(name: "println <:Integer>", linkageName: "println <:Integer>", scope: !18, file: !2, line: 9, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!40 = !DILocation(line: 9, column: 9, scope: !39)
!41 = distinct !DISubprogram(name: "swap <:ReferenceMut<Integer>> and <:ReferenceMut<Integer>>", linkageName: "swap <:ReferenceMut<Integer>> and <:ReferenceMut<Integer>>", scope: !18, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!42 = !DILocation(line: 6, column: 9, scope: !41)
!43 = !DILocation(line: 6, column: 12, scope: !41)
!44 = !DILocation(line: 7, column: 3, scope: !41)
!45 = !DILocation(line: 7, column: 6, scope: !41)
!46 = !DILocation(line: 8, column: 2, scope: !41)
