src/tests/snapshots/ppl__tests__trait_with_ref.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "src/main.ppl"

%"Type<String>" = type { %String, %Integer }
%String = type { ptr }
%Integer = type { ptr }

@"Type<String>" = private global %"Type<String>" zeroinitializer
@0 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@1 = private unnamed_addr constant [12 x i8] c"foo integer\00", align 1
@x = global %Integer zeroinitializer

define private void @initialize() !dbg !3 {
  %1 = alloca %"Type<String>", align 8, !dbg !7
  %"Type<String>.name" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 0, !dbg !7
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 6), !dbg !8
  store %String %2, ptr %"Type<String>.name", align 8, !dbg !8
  %"Type<String>.size" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 1, !dbg !8
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !8
  store %Integer %3, ptr %"Type<String>.size", align 8, !dbg !8
  %4 = load %"Type<String>", ptr %1, align 8, !dbg !8
  store %"Type<String>" %4, ptr @"Type<String>", align 8, !dbg !8
  br label %return, !dbg !8

return:                                           ; preds = %0
  ret void
}

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define void @main.execute() !dbg !9 {
  call void @initialize(), !dbg !10
  call void @initialize.1(), !dbg !11
  call void @"bar <:Reference<Foo>>"(ptr @x), !dbg !12
  call void @destroy_integer(ptr @x), !dbg !13
  br label %return, !dbg !13

return:                                           ; preds = %0
  ret void
}

define void @"foo <:Reference<Integer>>"(ptr %0) !dbg !14 {
  %"$arg0" = alloca ptr, align 8
  store ptr %0, ptr %"$arg0", align 8
  %2 = call %String @string_from_c_string_and_length(ptr @1, i64 11), !dbg !15
  call void @"println <:String>"(%String %2), !dbg !15
  br label %return, !dbg !16

return:                                           ; preds = %1
  ret void
}

declare void @"println <:String>"(%String)

define private void @initialize.1() !dbg !17 {
  %1 = call %Integer @integer_from_i64(i64 0), !dbg !18
  store %Integer %1, ptr @x, align 8, !dbg !18
  br label %return, !dbg !18

return:                                           ; preds = %0
  ret void
}

define void @"bar <:Reference<Foo>>"(ptr %0) !dbg !19 {
  %x = alloca ptr, align 8
  store ptr %0, ptr %x, align 8
  call void @"foo <:Reference<Integer>>"(ptr %x), !dbg !20
  br label %return, !dbg !20

return:                                           ; preds = %1
  ret void
}

declare void @destroy_integer(ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "src/main.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !2, file: !2, line: 8, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 8, column: 5, scope: !3)
!8 = !DILocation(line: 0, scope: !3)
!9 = distinct !DISubprogram(name: "main.execute", linkageName: "main.execute", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 8, column: 5, scope: !9)
!11 = !DILocation(line: 7, column: 8, scope: !9)
!12 = !DILocation(line: 8, column: 4, scope: !9)
!13 = !DILocation(line: 7, scope: !9)
!14 = distinct !DISubprogram(name: "foo <:Reference<Integer>>", linkageName: "foo <:Reference<Integer>>", scope: !9, file: !2, line: 3, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!15 = !DILocation(line: 3, column: 30, scope: !14)
!16 = !DILocation(line: 3, column: 22, scope: !14)
!17 = distinct !DISubprogram(name: "initialize.1", linkageName: "initialize.1", scope: !9, file: !2, line: 7, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!18 = !DILocation(line: 7, column: 8, scope: !17)
!19 = distinct !DISubprogram(name: "bar <:Reference<Foo>>", linkageName: "bar <:Reference<Foo>>", scope: !9, file: !2, line: 5, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!20 = !DILocation(line: 5, column: 24, scope: !19)
