src/tests/snapshots/ppl__tests__traits.hir.snap
---
source: src/tests/mod.rs
expression: hir
---
trait Test:
	fn required <$arg0: Self> -> None

	fn default <x: Self> -> Self:
		return (x:Self)



fn required <x: Integer> -> None:
	return none

let $tmp0@149: Integer = 1
let res: Integer = default ($tmp0@149:Integer)
let $tmp0@159: Integer = clone (res:Integer)
println ($tmp0@159:Integer)
destroy ($tmp0@149:Integer)
destroy (res:Integer)
destroy ($tmp0@159:Integer)
