src/tests/snapshots/ppl__tests__traits.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "src/main.ppl"

%"Type<String>" = type { %String, %Integer }
%String = type { ptr }
%Integer = type { ptr }

@"Type<String>" = private global %"Type<String>" zeroinitializer
@0 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@"$tmp0@149" = global %Integer zeroinitializer
@"$tmp1@141" = global %Integer zeroinitializer
@res = global %Integer zeroinitializer
@"$tmp0@159" = global %Integer zeroinitializer

define private void @initialize() !dbg !3 {
  %1 = alloca %"Type<String>", align 8, !dbg !7
  %"Type<String>.name" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 0, !dbg !7
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 6), !dbg !8
  store %String %2, ptr %"Type<String>.name", align 8, !dbg !8
  %"Type<String>.size" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 1, !dbg !8
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !8
  store %Integer %3, ptr %"Type<String>.size", align 8, !dbg !8
  %4 = load %"Type<String>", ptr %1, align 8, !dbg !8
  store %"Type<String>" %4, ptr @"Type<String>", align 8, !dbg !8
  br label %return, !dbg !8

return:                                           ; preds = %0
  ret void
}

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define void @"required <:Integer>"(%Integer %0) !dbg !9 {
  %x = alloca %Integer, align 8
  store %Integer %0, ptr %x, align 8
  %2 = load %Integer, ptr %x, align 8, !dbg !10
  call void @destroy_integer(%Integer %2), !dbg !10
  br label %return, !dbg !11

return:                                           ; preds = %1
  ret void
}

declare void @destroy_integer(%Integer)

define private void @initialize.1() !dbg !12 {
  %1 = call %Integer @integer_from_i64(i64 1), !dbg !13
  store %Integer %1, ptr @"$tmp0@149", align 8, !dbg !13
  br label %return, !dbg !13

return:                                           ; preds = %0
  ret void
}

define private void @initialize.2() !dbg !14 {
  %1 = load %Integer, ptr @"$tmp0@149", align 8, !dbg !15
  %2 = call %Integer @"default <:Integer>"(%Integer %1), !dbg !15
  store %Integer %2, ptr @"$tmp1@141", align 8, !dbg !15
  br label %return, !dbg !15

return:                                           ; preds = %0
  ret void
}

define %Integer @"default <:Integer>"(%Integer %0) !dbg !16 {
  %return_value = alloca %Integer, align 8
  %x = alloca %Integer, align 8
  store %Integer %0, ptr %x, align 8
  %2 = load %Integer, ptr %x, align 8, !dbg !17
  store %Integer %2, ptr %return_value, align 8, !dbg !17
  br label %return, !dbg !17

return:                                           ; preds = %1
  %3 = load %Integer, ptr %return_value, align 8
  ret %Integer %3
}

define private void @initialize.3() !dbg !18 {
  %1 = load %Integer, ptr @"$tmp1@141", align 8, !dbg !19
  store %Integer %1, ptr @res, align 8, !dbg !19
  br label %return, !dbg !19

return:                                           ; preds = %0
  ret void
}

define private void @initialize.4() !dbg !20 {
  %1 = load %Integer, ptr @res, align 8, !dbg !21
  %2 = call %Integer @clone_integer(%Integer %1), !dbg !21
  store %Integer %2, ptr @"$tmp0@159", align 8, !dbg !21
  br label %return, !dbg !21

return:                                           ; preds = %0
  ret void
}

declare %Integer @clone_integer(%Integer)

define void @main.execute() !dbg !22 {
init_globals:
  call void @initialize(), !dbg !23
  call void @initialize.1(), !dbg !24
  call void @initialize.2(), !dbg !25
  call void @initialize.3(), !dbg !25
  call void @initialize.4(), !dbg !26
  br label %0, !dbg !26

0:                                                ; preds = %init_globals
  %1 = load %Integer, ptr @"$tmp0@149", align 8, !dbg !24
  call void @destroy_integer(%Integer %1), !dbg !24
  %2 = load %Integer, ptr @"$tmp1@141", align 8, !dbg !25
  call void @destroy_integer(%Integer %2), !dbg !25
  %3 = load %Integer, ptr @res, align 8, !dbg !27
  call void @destroy_integer(%Integer %3), !dbg !27
  %4 = load %Integer, ptr @"$tmp0@159", align 8, !dbg !26
  call void @destroy_integer(%Integer %4), !dbg !26
  br label %return, !dbg !26

return:                                           ; preds = %0
  ret void
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "src/main.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !2, file: !2, line: 10, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 10, column: 11, scope: !3)
!8 = !DILocation(line: 0, scope: !3)
!9 = distinct !DISubprogram(name: "required <:Integer>", linkageName: "required <:Integer>", scope: !2, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 6, column: 12, scope: !9)
!11 = !DILocation(line: 6, column: 28, scope: !9)
!12 = distinct !DISubprogram(name: "initialize.1", linkageName: "initialize.1", scope: !2, file: !2, line: 9, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!13 = !DILocation(line: 9, column: 18, scope: !12)
!14 = distinct !DISubprogram(name: "initialize.2", linkageName: "initialize.2", scope: !2, file: !2, line: 9, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!15 = !DILocation(line: 9, column: 18, scope: !14)
!16 = distinct !DISubprogram(name: "default <:Integer>", linkageName: "default <:Integer>", scope: !14, file: !2, line: 3, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!17 = !DILocation(line: 3, column: 25, scope: !16)
!18 = distinct !DISubprogram(name: "initialize.3", linkageName: "initialize.3", scope: !2, file: !2, line: 9, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!19 = !DILocation(line: 9, column: 10, scope: !18)
!20 = distinct !DISubprogram(name: "initialize.4", linkageName: "initialize.4", scope: !2, file: !2, line: 10, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!21 = !DILocation(line: 10, column: 8, scope: !20)
!22 = distinct !DISubprogram(name: "main.execute", linkageName: "main.execute", scope: !2, file: !2, line: 10, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!23 = !DILocation(line: 10, column: 11, scope: !22)
!24 = !DILocation(line: 9, column: 18, scope: !22)
!25 = !DILocation(line: 9, column: 10, scope: !22)
!26 = !DILocation(line: 10, column: 8, scope: !22)
!27 = !DILocation(line: 9, scope: !22)
